// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common transform get parentId from parent 1`] = `
Object {
  "aliases": Array [],
  "createdAt": "2019-12-25T13:18:58.765Z",
  "description": "x",
  "email": "",
  "externalId": "ext",
  "headId": 123456,
  "id": 13,
  "label": "l",
  "membersCount": 42,
  "name": "name",
  "parentId": 13,
  "uid": 42,
}
`;

exports[`common transform works 1`] = `
Object {
  "aliases": Array [],
  "createdAt": "2019-12-25T13:18:58.765Z",
  "description": "x",
  "email": "",
  "externalId": "ext",
  "headId": 123456,
  "id": 13,
  "label": "l",
  "membersCount": 42,
  "name": "name",
  "parentId": 1,
  "uid": 42,
}
`;

exports[`common transformShort works 1`] = `
Object {
  "id": 13,
  "membersCount": 42,
  "name": "name",
}
`;
